# dfstool

./: .gitignore  Cargo.toml  README.md  elite-new.ssd  example.ssd  prog1.bas  prog1.bas.txt  prog2.bas  prog2.bas.txt  test.ssd
src/: address.rs  args.rs  bbc_basic.rs  bcd_value.rs  boot.rs  boot_option.rs  catalogue.rs  catalogue_bytes.rs  catalogue_entry.rs  constants.rs  cycle_number.rs  detokenize.rs  detokenize_command.rs  dfs_path.rs  directory.rs  disc_side.rs  disc_size.rs  disc_title.rs  dsd_reader.rs  extract.rs  extract_command.rs  file_count.rs  file_descriptor.rs  file_name.rs  file_offset.rs  file_spec.rs  file_type.rs  image_reader.rs  inf.rs  length.rs  line_ending.rs  line_parser.rs  main.rs  make.rs  make_command.rs  manifest.rs  manifest_command.rs  manifest_file.rs  path_util.rs  run.rs  (+7 more)
src/bbc_basic/: constants.rs  detokenize.rs  line_number.rs  mod.rs  token_generator.rs  tokenize.rs  util.rs
src/commands/: detokenize.rs  extract.rs  extract_command.rs  make.rs  make_command.rs  manifest.rs  manifest_command.rs  mod.rs  new.rs  new_command.rs  show.rs  show_command.rs  tokenize.rs
src/dfs/: address.rs  boot_option.rs  catalogue.rs  catalogue_bytes.rs  catalogue_entry.rs  constants.rs  cycle_number.rs  dfs_path.rs  directory.rs  disc_size.rs  disc_title.rs  file_count.rs  file_descriptor.rs  file_name.rs  file_offset.rs  file_spec.rs  mod.rs  sector_bytes.rs  sector_size.rs  side.rs  start_sector.rs  util.rs
src/metadata/: file.rs  manifest.rs  mod.rs
src/ops/: mod.rs  new_image.rs  new_ssd.rs
tools/: bin2rs.py  text2rs.py
