[package]
name = "dfstool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
path-absolutize = "3.1.1"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
missing_const_for_fn = "deny"
pedantic = "deny"
